--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="{% url 'chat:room' room.id %}" class="btn btn-primary">Done</a>
+                <button class="btn btn-primary" onclick="closeModal('#options'); alert()">Done</button>
             </div>
         </div>
     </div>
