--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary" onclick="closeModal('#options'); alert()">Done</button>
+                <button class="btn btn-primary" onclick="closeModal('#options'); alert('Please refresh the page to see changes')">Done</button>
             </div>
         </div>
     </div>
