--- a/chat/static/chat/css/main.css
+++ b/chat/static/chat/css/main.css
@@ -102,6 +102,49 @@ body {
     margin: 0;
 }
 
+/* ------------------ */
+/* REUSABLE */
+/* ------------------ */
+
+section {
+    margin-bottom: 90px;
+}
+
+div.center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+/* ------Headings---------- */
+h2 {
+    margin: 15px 0;
+}
+
+h2:after {
+    content: " ";
+    display: block;
+    background-color: #4CD137;
+    width: 160px;
+    height: 2px;
+    margin: 15px auto;
+}
+
+/* Iframes */
+.video-container iframe {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* ------Buttons------- */
+.btn-success {
+    background-color: #4CD137;
+}
+
+.btn-warning {
+    background-color: #EBC12C;
+}
+
 .btn-rose {
     background-image: linear-gradient(-180deg, #ffc0db 3%, #e14f7c 97%);
     box-shadow: 0 7px 17px 0 rgba(0, 0, 0, 0.24);
@@ -197,47 +240,25 @@ body {
     text-shadow: 0 2px 4px black;
 }
 
-/* ------------------ */
-/* REUSABLE */
-/* ------------------ */
-
-section {
-    margin-bottom: 50px;
+.btn-circle {
+    border-radius: 50%;
 }
 
-div.center {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+/* ----------I--------- */
+.i-xl {
+    
 }
 
-/* ------Headings---------- */
-h2 {
-    margin: 15px 0;
+.i-lg {
+    font-size: 40px;
 }
 
-h2:after {
-    content: " ";
-    display: block;
-    background-color: #4CD137;
-    width: 160px;
-    height: 2px;
-    margin: 15px auto;
+.i-md {
+    font-size: 25px;
 }
 
-/* Iframes */
-.video-container iframe {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-/* ------Buttons------- */
-.btn-success {
-    background-color: #4CD137;
-}
-
-.btn-warning {
-    background-color: #EBC12C;
+.i-sm {
+    
 }
 
 /* ---------Displaying-------- */
